# picounzip

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  appveyor.yml  test_runner.py
include/: picounzip.hpp
src/: CMakeLists.txt  picounzip.cc  picounzip.hpp
tests/: CMakeLists.txt  create_large_testdata.py  deflate_compress.py  deflate_reader.cc  unzip_from_file.cc  unzip_from_file_cpp03.cc  unzip_from_file_header_only1.cc  unzip_from_file_header_only2.cc  unzip_from_large_file.cc
tests/resource/: def.txt.z
tests/resource/deflate/: text.txt.z
