

add_executable(unzip_from_file_cpp03 unzip_from_file_cpp03.cc)
target_link_libraries(unzip_from_file_cpp03 picounzip gtest_main)
set_target_properties(unzip_from_file_cpp03 PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")


add_executable(unzip_from_file unzip_from_file.cc)
target_link_libraries(unzip_from_file picounzip gtest_main)
set_target_properties(unzip_from_file PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")


add_executable(unzip_from_large_file unzip_from_large_file.cc)
target_link_libraries(unzip_from_large_file picounzip gtest_main)
set_target_properties(unzip_from_large_file PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")


add_executable(deflate_reader deflate_reader.cc)
target_link_libraries(deflate_reader picounzip gtest_main)
set_target_properties(deflate_reader PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

add_executable(unzip_from_file_header_only unzip_from_file_header_only1.cc unzip_from_file_header_only2.cc unzip_from_file_header_only2.cc)
target_link_libraries(unzip_from_file_header_only ${ZLIB_LIBRARIES} gtest_main)
target_include_directories(unzip_from_file_header_only PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../src)
set_target_properties(unzip_from_file_header_only PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

add_test(NAME deflate_reader COMMAND deflate_reader WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME unzip_from_file COMMAND unzip_from_file WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME unzip_from_file_cpp03 COMMAND unzip_from_file_cpp03 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME unzip_from_file_header_only COMMAND unzip_from_file_header_only WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME unzip_from_large_file COMMAND unzip_from_large_file WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
